Fix toolbar spacing issue
There were gaps occurring between the list item elements' borders

--- a/css/persistent.css
+++ b/css/persistent.css
@@ -19,7 +19,7 @@ img.logo {
 nav {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     position: sticky;
     position: -webkit-sticky; /* Safari */
@@ -30,7 +30,8 @@ nav {
 ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     width: 75%;
     margin: 0;
     padding: 0;
@@ -45,7 +46,7 @@ li a {
     font-weight: bold;
     color: black;
     text-align: center;
-    padding: 10px 0px;
+    padding: 8px 20px;
     margin: 0px;
     text-decoration: none;
     width: auto;
